--- a/taishou/steward-dao/pom.xml
+++ b/taishou/steward-dao/pom.xml
@@ -57,6 +57,12 @@
                     </execution>
                 </executions>
                 <dependencies>
+                    <!-- https://mvnrepository.com/artifact/io.github.itfinally/mybatis-generator -->
+                    <dependency>
+                        <groupId>io.github.orange1438</groupId>
+                        <artifactId>mybatis-generator-core</artifactId>
+                        <version>1.3.5</version>
+                    </dependency>
                     <dependency>
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
