--- a/taishou/pom.xml
+++ b/taishou/pom.xml
@@ -129,18 +129,12 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.10</version>
             </dependency>
-
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>1.5.9.RELEASE</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.mybatis.spring.boot</groupId>
-                <artifactId>mybatis-spring-boot-starter</artifactId>
-                <version>1.3.2</version>
             </dependency>
             <dependency>
                 <groupId>mysql</groupId>
@@ -163,6 +157,11 @@
                 <groupId>log4j</groupId>
                 <artifactId>log4j</artifactId>
                 <version>${log4j.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-aop</artifactId>
+                <version>2.3.0.RELEASE</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
