--- a/taishou/pom.xml
+++ b/taishou/pom.xml
@@ -163,6 +163,18 @@
                 <artifactId>spring-boot-starter-aop</artifactId>
                 <version>2.3.0.RELEASE</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-activemq</artifactId>
+                <version>1.5.0.RELEASE</version>
+            </dependency>
+            <!--消息队列连接池-->
+            <dependency>
+                <groupId>org.apache.activemq</groupId>
+                <artifactId>activemq-pool</artifactId>
+                <version>5.15.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
