--- a/taishou/steward-controller/src/main/resources/application.yml
+++ b/taishou/steward-controller/src/main/resources/application.yml
@@ -21,6 +21,25 @@ spring:
     database: 0
     host: 39.108.184.0
     port: 6379
+    password: 123456
+
+  activemq:
+    broker-url: tcp://39.108.184.0:61617
+    user: admin
+    password: admin
+    close-timeout: 15   # 在考虑结束之前等待的时间
+    in-memory: true      # 默认代理URL是否应该在内存中。如果指定了显式代理，则忽略此值。
+    non-blocking-redelivery: false  # 是否在回滚回滚消息之前停止消息传递。这意味着当启用此命令时，消息顺序不会被保留。
+    send-timeout: 0     # 等待消息发送响应的时间。设置为0等待永远。
+    #queue-name: calculate
+    topic-name: calculate
+    packages:
+      trust-all: true
+  pool:
+    enabled: true
+    max-connections: 10   #连接池最大连接数
+    idle-timeout: 30000   #空闲的连接过期时间，默认为30秒
+
 
 mybatis:
   mapperLocations: classpath:mapper/*.xml
