太守控制台用户模块

--- a/taishou-console/console-common/pom.xml
+++ b/taishou-console/console-common/pom.xml
@@ -10,6 +10,27 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>console-common</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>io.github.orange1438</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-spring</artifactId>
+        </dependency>
+
+    </dependencies>
 
 </project>
