--- a/taishou/steward-dao/pom.xml
+++ b/taishou/steward-dao/pom.xml
@@ -42,7 +42,7 @@
                 <version>1.3.5</version>
                 <configuration>
                     <!--配置文件的位置-->
-                    <configurationFile>../steward-dao/src/main/resources/mybatis-generator.xml</configurationFile>
+                    <configurationFile>src/main/resources/mybatis-generator.xml</configurationFile>
                     <verbose>true</verbose>
                     <overwrite>false</overwrite>
                 </configuration>
